--- a/DataRepProject/src/app/recipe-post/recipe-post.component.html
+++ b/DataRepProject/src/app/recipe-post/recipe-post.component.html
@@ -9,7 +9,7 @@
         required
         minlength="3"
         #title="ngModel">
-      <mat-error *ngIf="title.invalid">Enter your receipe title here.</mat-error>
+      <mat-error *ngIf="title.invalid">Please enter a post title.</mat-error>
     </mat-form-field>
     <mat-form-field>
       <textarea
@@ -19,12 +19,11 @@
         ngModel
         required
         #content="ngModel"></textarea>
-      <mat-error *ngIf="content.invalid">Enter your receipe description here.</mat-error>
+      <mat-error *ngIf="content.invalid">Please enter a post title.</mat-error>
     </mat-form-field>
-    <br><br><br><br>
     <button
       mat-raised-button
       color="accent"
-      type="submit">Save Receipe</button>
+      type="submit">Save Post</button>
   </form>
 </mat-card>
