--- a/DataRepProject/src/app/recipe-post/recipe-post.component.html
+++ b/DataRepProject/src/app/recipe-post/recipe-post.component.html
@@ -9,7 +9,7 @@
         required
         minlength="3"
         #title="ngModel">
-      <mat-error *ngIf="title.invalid">Please enter a post title.</mat-error>
+      <mat-error *ngIf="title.invalid">Please enter a recipe title.</mat-error>
     </mat-form-field>
     <mat-form-field>
       <textarea
@@ -19,11 +19,12 @@
         ngModel
         required
         #content="ngModel"></textarea>
-      <mat-error *ngIf="content.invalid">Please enter a post title.</mat-error>
+      <mat-error *ngIf="content.invalid">Please enter a recipe description.</mat-error>
     </mat-form-field>
+    <br><br>
     <button
       mat-raised-button
-      color="accent"
+      color="primary"
       type="submit">Save Post</button>
   </form>
 </mat-card>
