fixed form, edited some CSS

--- a/DataRepProject/src/app/app.component.css
+++ b/DataRepProject/src/app/app.component.css
@@ -1,4 +1,4 @@
-@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
 
 .mat-toolbar-row {
     font-family: 'Patrick Hand', cursive;
