--- a/DataRepProject/src/app/recipe-post/recipe-post.component.css
+++ b/DataRepProject/src/app/recipe-post/recipe-post.component.css
@@ -1,5 +1,4 @@
-@import '~@angular/material/prebuilt-themes/indigo-pink.css';
-
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
 
 mat-form-field,
 textarea {
