--- a/DataRepProject/src/app/recipe-post/recipe-post.component.html
+++ b/DataRepProject/src/app/recipe-post/recipe-post.component.html
@@ -9,7 +9,7 @@
         required
         minlength="3"
         #title="ngModel">
-      <mat-error *ngIf="title.invalid">Please enter a recipe title.</mat-error>
+      <mat-error *ngIf="title.invalid">Please enter a post title.</mat-error>
     </mat-form-field>
     <mat-form-field>
       <textarea
@@ -19,12 +19,22 @@
         ngModel
         required
         #content="ngModel"></textarea>
-      <mat-error *ngIf="content.invalid">Please enter a recipe description.</mat-error>
+      <mat-error *ngIf="content.invalid">Please enter a post title.</mat-error>
     </mat-form-field>
-    <br><br>
+    <mat-form-field>
+      <input matInput 
+      [matDatepicker]="picker" 
+      placeholder="Choose a date"
+      name="date"
+      ngModel
+      required
+      #date="ngModel">
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
     <button
       mat-raised-button
-      color="primary"
+      color="accent"
       type="submit">Save Post</button>
   </form>
 </mat-card>
