--- a/DataRepProject/src/app/app.component.html
+++ b/DataRepProject/src/app/app.component.html
@@ -1,6 +1,7 @@
-<link href="https://fonts.googleapis.com/css?family=Patrick+Hand" rel="stylesheet">
+<!--<link href="https://fonts.googleapis.com/css?family=Patrick+Hand" rel="stylesheet"> -->
+<link href="https://fonts.googleapis.com/css?family=Marck+Script" rel="stylesheet">
 
-<mat-toolbar color="warn"> 
+<mat-toolbar color="accent"> 
   <mat-toolbar-row>
           <span class="title-center">
       Add your recipe title and description below...
@@ -9,8 +10,8 @@
   
     
 <mat-toolbar-row>
-<button mat-button [routerLink]="['/create']" color="accent">Create Recipe</button>
-<button mat-button [routerLink]="['/list']" color="accent">List of Recipes</button>
+<button mat-button [routerLink]="['/create']" color="warn">Create Recipe</button>
+<button mat-button [routerLink]="['/list']" color="warn">List of Recipes</button>
 </mat-toolbar-row>
 </mat-toolbar>
 
