--- a/DataRepProject/src/app/receipe-list/receipe-list.component.html
+++ b/DataRepProject/src/app/receipe-list/receipe-list.component.html
@@ -11,4 +11,4 @@
     </mat-action-row>
   </mat-expansion-panel>
 </mat-accordion>
-<p class="info-text mat-body-1" *ngIf="posts.length <= 0">No posts added yet!</p> 
+<p class="info-text mat-body-1" *ngIf="posts.length <= 0">Nobody has added a recipe yet!</p> 
