--- a/DataRepProject/src/app/receipe-list/receipe-list.component.html
+++ b/DataRepProject/src/app/receipe-list/receipe-list.component.html
@@ -1,10 +1,15 @@
-<mat-toolbar color="primary">Posts List</mat-toolbar>
+<mat-toolbar color="primary">Community Recipes!</mat-toolbar>
 <mat-accordion multi="true" *ngIf="posts.length > 0">
   <mat-expansion-panel [expanded]="true" *ngFor="let post of posts">
     <mat-expansion-panel-header>
       {{ post.title }}
     </mat-expansion-panel-header>
     <p>{{ post.content }}</p>
+    <p>{{ post.content2 }}</p>
+
+    <p>{{ post.date | date }}</p>
+
+
     <mat-action-row>
       <button mat-button [routerLink]="['/edit', post._id]" color="primary">EDIT</button>
       <button mat-button (click)="onDelete(post._id)" color="warn">DELETE</button>
